force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <description>Objeto filho do Case_Request__c. Este objeto serve para armazenar os históricos de cada Case Request. Separa as responsabilidades e facilita na compreensão</description>
    <label>Case History</label>
    <nameField>
        <label>Case_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>