force-app/main/default/objects/Case_History__c/fields/Case_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Request__c</fullName>
    <description>Campo de relacionamento master detail com o objeto case request.</description>
    <label>Case_Request</label>
    <referenceTo>Case_Request__c</referenceTo>
    <relationshipLabel>Case Histories</relationshipLabel>
    <relationshipName>Case_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>