force-app/main/default/objects/Case_History__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Armazena um valor true ou false para caso o case request tenha cumprido o SLA Deadline ou não</description>
    <label>SLA Met</label>
    <type>Checkbox</type>
</CustomField>